--- a/test/styles/paragraph.css
+++ b/test/styles/paragraph.css
@@ -141,7 +141,7 @@ hr, .video, .map, .photo, .illustration, .chart, .table, .audio, .esarticletitle
 .center { text-align: center !important; text-indent: 0; }
 .left { text-align: left !important; }
 .hang { margin-left: 25px; text-indent: -25px; }
-.noind { text-indent: 0; }
+.noind, .nopad { padding-top: 0; }
 .right { text-align: right !important; text-indent: 0; }
 .ind1 { padding-left: 25px; }
 .ind2 { padding-left: 50px; }
