remove rem font sizes

--- a/src/includes/mywsb/_global.scss
+++ b/src/includes/mywsb/_global.scss
@@ -5,14 +5,14 @@
 
 // Type scale
 
-$type-scale-1: 3rem !default;
-$type-scale-2: 2.25rem !default;
-$type-scale-3: 1.5rem !default;
-$type-scale-4: 1.25rem !default;
-$type-scale-5: 1rem !default;
-$type-scale-6: 0.875rem !default;
-$type-scale-7: 0.75rem !default;
-$type-scale-8: 0.6rem !default;
+$type-scale-1: 3em !default;
+$type-scale-2: 2.25em !default;
+$type-scale-3: 1.5em !default;
+$type-scale-4: 1.25em !default;
+$type-scale-5: 1em !default;
+$type-scale-6: 0.875em !default;
+$type-scale-7: 0.75em !default;
+$type-scale-8: 0.6em !default;
 
 
 // Spacing
