fix bible versenum style; use node sass to compile

--- a/src/includes/shared/_bibles.scss
+++ b/src/includes/shared/_bibles.scss
@@ -1,6 +1,6 @@
 .versenum {
-  @include sub-sup(0.3em);
-  margin-right: $spacing-extra-small;
+  @include sub-sup(-0.4em);
+  margin-right: 0.15em;
   font-weight: bold;
 }
 
