--- a/src/mywsb-dist.scss
+++ b/src/mywsb-dist.scss
@@ -1,5 +1,5 @@
 /*!*
- * VERSION: 2018-05-01 | EPUB | Production
+ * VERSION: 2018-05-31 | EPUB | Production
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -239,6 +239,7 @@ video {
 $fn-size: $type-scale-8;
 $fn-color: $red;
 
+@import "includes/shared/fn";
 @import "includes/shared/text-types";
 @import "includes/shared/bibles";
 
