--- a/test/styles/verse.css
+++ b/test/styles/verse.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
- * VERSION: 2018-05-01 | CROSS | Verse Mode
+ * VERSION: 2018-05-31 | CROSS | Verse Mode
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -982,68 +982,18 @@ hr,
 /**
  * Poetry
  */
-.poetry {
-  margin: 1em 0 1em 25px;
-}
-
-.poetry .poetry {
-  margin: 0;
-  padding-left: 25px;
-}
-
-.poetry p {
-  margin-left: 25px;
-  text-indent: -25px;
-}
-
-.poem1 {
-  margin: 0 0 0 2em;
-  text-indent: -0.5em;
-}
-
-.poem2 {
-  margin: 0 0 0 3em;
-  text-indent: -0.5em;
-}
-
-.poem3 {
-  margin: 0 0 0 4em;
-  text-indent: -0.5em;
-}
-
-.poem4 {
-  margin: 0 0 0 5em;
-  text-indent: -0.5em;
-}
-
-.poem5 {
-  margin: 0 0 0 6em;
-  text-indent: -0.5em;
-}
-
-.poem6 {
-  margin: 0 0 0 7em;
-  text-indent: -0.5em;
-}
-
-.poem7 {
-  margin: 0 0 0 8em;
-  text-indent: -0.5em;
-}
-
-.poem8 {
-  margin: 0 0 0 9em;
-  text-indent: -0.5em;
-}
-
-.poem9 {
-  margin: 0 0 0 10em;
-  text-indent: -0.5em;
-}
-
+.poetry p,
+.poem1,
+.poem2,
+.poem3,
+.poem4,
+.poem5,
+.poem6,
+.poem7,
+.poem8,
+.poem9,
 .poem10 {
-  margin: 0 0 0 11em;
-  text-indent: -0.5em;
+  margin-left: 0.25em;
 }
 
 ol,
