--- a/src/mywsb-dev.scss
+++ b/src/mywsb-dev.scss
@@ -349,7 +349,8 @@ $fn-color: $red;
 @import "includes/shared/text-types";
 @import "includes/shared/bibles";
 
-.versenum::after {
+.versenum::after,
+.nonversenum::after {
   content: "\00a0";
 }
 
