add para/verse support for mywsb Bibles

--- a/mywsb-dev.css
+++ b/mywsb-dev.css
@@ -5,8 +5,8 @@
  * used in accordance with an MIT License (OSI).
  */
 /**
- * A transitional stylesheet for myWSB EPUBs, combining
- * familiar styles for the B&H Direct eBook Development
+ * A stylesheet for myWSB EPUBs, combining classes and
+ * styling familiar to the B&H Direct eBook Development
  * team with functional CSS from Tachyons.
  *
  * This version is for development environments only.
