--- a/src/includes/shared/_quotes.scss
+++ b/src/includes/shared/_quotes.scss
@@ -4,11 +4,12 @@
 
 blockquote {
   border-left: 1px dotted $black;
-  margin-bottom: $spacing-small;
-  margin-top: $spacing-small;
+  margin-bottom: ($spacing-small + $spacing-extra-small);
+  margin-top: ($spacing-medium + $spacing-extra-small);
   padding-left: $spacing-medium;
   p {
     margin: $spacing-small 0;
+    padding-top: 0;
     text-indent: 0;
   }
 }
