--- a/test/styles/paragraph.css
+++ b/test/styles/paragraph.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
- * VERSION: 2018-05-31 | CROSS | Paragraph Mode
+ * VERSION: 2018-06-06 | CROSS | Paragraph Mode
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -170,7 +170,7 @@ p {
   margin: 0;
   text-align: left;
   text-indent: 0;
-  padding-top: 0.5em;
+  padding-top: 0.75em;
 }
 
 li {
@@ -891,11 +891,7 @@ h6,
 .aside {
   border: 1px solid #777;
   margin: 2em 0;
-  padding: 1em 2em;
-}
-.aside p {
-  margin: 0.25em 0 0 0;
-  text-indent: 0;
+  padding: 1em 2em 1.75em 2em;
 }
 .aside blockquote {
   border: none !important;
