address recent issues

--- a/src/includes/mywsb/_defaults.scss
+++ b/src/includes/mywsb/_defaults.scss
@@ -4,6 +4,7 @@ $def-line: $lh-copy; // Default line height
 $def-font: $type-scale-5; // Default font size
 $def-ind:  1.5rem;  // Default text indent
 $def-neg-ind: -$def-ind; // Default negative indent
+$ballot-neg-ind: -1rem;
 $paren-neg-ind: -1.15rem;
 $paren-leftness: 0.15rem;
 $right-paren-neg-ind: -0.75rem;
