--- a/src/includes/ws/_defaults.scss
+++ b/src/includes/ws/_defaults.scss
@@ -4,6 +4,7 @@ $def-line: $lh-copy; // Default line height
 $def-font: $type-scale-5; // Default font size
 $def-ind : 1.5em; // Default text indent
 $def-neg-ind: -$def-ind; // Default negative indent
+$ballot-neg-ind: -1em;
 $paren-neg-ind: -1.15em;
 $paren-leftness: 0.15em;
 $right-paren-neg-ind: -0.75em;
