--- a/mywsb-dev.css
+++ b/mywsb-dev.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
- * VERSION: 2018-06-06 | EPUB | Development
+ * VERSION: 2018-06-13 | EPUB | Development
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -1005,6 +1005,20 @@ li {
   list-style-type: square;
 }
 
+.ballot {
+  counter-reset: list;
+  list-style-type: none;
+}
+.ballot > li {
+  position: relative;
+  text-indent: -1rem;
+}
+.ballot > li:before {
+  content: "☐";
+  left: -0.4rem;
+  position: relative;
+}
+
 ol:not(.none) li {
   padding-left: 0.25rem;
 }
@@ -1242,6 +1256,18 @@ blockquote p {
   font-style: normal;
 }
 
+.epigraph {
+  border: none !important;
+  font-size: 1em;
+  margin: 1rem 0;
+  padding: 0;
+}
+.epigraph p,
+.epigraph .sig {
+  margin: 0.5rem 0;
+  text-align: center;
+}
+
 /*
  * Pull quotes
  */
@@ -1321,7 +1347,7 @@ footer {
  * Poetry
  */
 .poetry {
-  margin: 1rem 0 1rem 1.5rem;
+  margin: 0.75rem 0 0 1.5rem;
 }
 
 .poetry .poetry {
@@ -1331,57 +1357,68 @@ footer {
 
 .poetry p {
   margin-left: 1.5rem;
+  padding-top: 0.25rem;
   text-indent: -1.5rem;
 }
 
 .poem1 {
-  margin: 0 0 0 2rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 3rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem2 {
-  margin: 0 0 0 3rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 4.5rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem3 {
-  margin: 0 0 0 4rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 6rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem4 {
-  margin: 0 0 0 5rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 7.5rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem5 {
-  margin: 0 0 0 6rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 9rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem6 {
-  margin: 0 0 0 7rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 10.5rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem7 {
-  margin: 0 0 0 8rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 12rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem8 {
-  margin: 0 0 0 9rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 13.5rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem9 {
-  margin: 0 0 0 10rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 15rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 .poem10 {
-  margin: 0 0 0 11rem;
-  text-indent: -0.5rem;
+  margin: 0 0 0 16.5rem;
+  text-indent: -1.5rem;
+  padding-top: 0.25rem;
 }
 
 /**
