--- a/src/includes/shared/_quotes.scss
+++ b/src/includes/shared/_quotes.scss
@@ -26,6 +26,19 @@ blockquote {
   }
 }
 
+.epigraph {
+  border: none !important;
+  font-size: $type-scale-5;
+  margin: $spacing-medium 0;
+  padding: 0;
+  
+  p,
+  .sig {
+    margin: $spacing-small 0;
+    text-align: center;
+  }
+}
+
 
 /*
  * Pull quotes
