--- a/test/styles/paragraph.css
+++ b/test/styles/paragraph.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
- * VERSION: 2018-06-06 | CROSS | Paragraph Mode
+ * VERSION: 2018-06-13 | CROSS | Paragraph Mode
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -1157,7 +1157,7 @@ hr,
  * Poetry
  */
 .poetry {
-  margin: 1em 0 1em 25px;
+  margin: 0.75em 0 0 25px;
 }
 
 .poetry .poetry {
@@ -1167,57 +1167,68 @@ hr,
 
 .poetry p {
   margin-left: 25px;
+  padding-top: 0.25em;
   text-indent: -25px;
 }
 
 .poem1 {
-  margin: 0 0 0 2em;
-  text-indent: -0.5em;
+  margin: 0 0 0 50px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem2 {
-  margin: 0 0 0 3em;
-  text-indent: -0.5em;
+  margin: 0 0 0 75px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem3 {
-  margin: 0 0 0 4em;
-  text-indent: -0.5em;
+  margin: 0 0 0 100px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem4 {
-  margin: 0 0 0 5em;
-  text-indent: -0.5em;
+  margin: 0 0 0 125px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem5 {
-  margin: 0 0 0 6em;
-  text-indent: -0.5em;
+  margin: 0 0 0 150px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem6 {
-  margin: 0 0 0 7em;
-  text-indent: -0.5em;
+  margin: 0 0 0 175px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem7 {
-  margin: 0 0 0 8em;
-  text-indent: -0.5em;
+  margin: 0 0 0 200px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem8 {
-  margin: 0 0 0 9em;
-  text-indent: -0.5em;
+  margin: 0 0 0 225px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem9 {
-  margin: 0 0 0 10em;
-  text-indent: -0.5em;
+  margin: 0 0 0 250px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 .poem10 {
-  margin: 0 0 0 11em;
-  text-indent: -0.5em;
+  margin: 0 0 0 275px;
+  text-indent: -25px;
+  padding-top: 0.25em;
 }
 
 /*------------------------------------*\
