--- a/test/styles/wordsearch.css
+++ b/test/styles/wordsearch.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
- * VERSION: 2018-06-06 | CROSS | General
+ * VERSION: 2018-06-13 | CROSS | General
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -1060,6 +1060,20 @@ li {
   list-style-type: square;
 }
 
+.ballot {
+  counter-reset: list;
+  list-style-type: none;
+}
+.ballot > li {
+  position: relative;
+  text-indent: -1em;
+}
+.ballot > li:before {
+  content: "☐";
+  left: -0.4em;
+  position: relative;
+}
+
 ol:not(.none) li {
   padding-left: 0.25em;
 }
@@ -1299,6 +1313,18 @@ blockquote p {
   font-style: normal;
 }
 
+.epigraph {
+  border: none !important;
+  font-size: 1em;
+  margin: 1em 0;
+  padding: 0;
+}
+.epigraph p,
+.epigraph .sig {
+  margin: 0.5em 0;
+  text-align: center;
+}
+
 /*
  * Pull quotes
  */
@@ -1439,7 +1465,7 @@ hr,
  * Poetry
  */
 .poetry {
-  margin: 1em 0 1em 1.5em;
+  margin: 0.75em 0 0 1.5em;
 }
 
 .poetry .poetry {
@@ -1449,57 +1475,68 @@ hr,
 
 .poetry p {
   margin-left: 1.5em;
+  padding-top: 0.25em;
   text-indent: -1.5em;
 }
 
 .poem1 {
-  margin: 0 0 0 2em;
-  text-indent: -0.5em;
+  margin: 0 0 0 3em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem2 {
-  margin: 0 0 0 3em;
-  text-indent: -0.5em;
+  margin: 0 0 0 4.5em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem3 {
-  margin: 0 0 0 4em;
-  text-indent: -0.5em;
+  margin: 0 0 0 6em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem4 {
-  margin: 0 0 0 5em;
-  text-indent: -0.5em;
+  margin: 0 0 0 7.5em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem5 {
-  margin: 0 0 0 6em;
-  text-indent: -0.5em;
+  margin: 0 0 0 9em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem6 {
-  margin: 0 0 0 7em;
-  text-indent: -0.5em;
+  margin: 0 0 0 10.5em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem7 {
-  margin: 0 0 0 8em;
-  text-indent: -0.5em;
+  margin: 0 0 0 12em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem8 {
-  margin: 0 0 0 9em;
-  text-indent: -0.5em;
+  margin: 0 0 0 13.5em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem9 {
-  margin: 0 0 0 10em;
-  text-indent: -0.5em;
+  margin: 0 0 0 15em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 .poem10 {
-  margin: 0 0 0 11em;
-  text-indent: -0.5em;
+  margin: 0 0 0 16.5em;
+  text-indent: -1.5em;
+  padding-top: 0.25em;
 }
 
 /*------------------------------------*\
