--- a/mywsb-dev.css
+++ b/mywsb-dev.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
- * VERSION: 2018-06-13 | EPUB | Development
+ * VERSION: 2018-07-06 | EPUB | Development
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -845,7 +845,7 @@ a[data-ref] {
   margin-bottom: -1px;
 }
 
-span[data-context~=scripture],
+span[data-context],
 .versemode {
   display: none !important;
 }
