left align sigs on right

--- a/src/includes/shared/_quotes.scss
+++ b/src/includes/shared/_quotes.scss
@@ -11,7 +11,13 @@ blockquote {
     margin: $spacing-small 0;
     padding-top: 0;
     text-indent: 0;
+    }
+  .sig {
+    margin-left: $spacing-extra-extra-extra-large;
+    position: relative;
+    text-align: left;
   }
+  
 }
 
 .scriptext {
@@ -26,6 +32,7 @@ blockquote {
   }
 }
 
+
 .epigraph {
   border: none !important;
   font-size: $type-scale-5;
@@ -35,6 +42,7 @@ blockquote {
   p,
   .sig {
     margin: $spacing-small 0;
+    position: relative;
     text-align: center;
   }
 }
@@ -60,7 +68,8 @@ blockquote {
   }
 
   .sig {
-    margin-left: 0;
+    margin-left: inherit;
+    margin-right: 0;
     text-align: right;
   }
 }
