--- a/src/paragraph.scss
+++ b/src/paragraph.scss
@@ -1,381 +1,33 @@
-/*!*
+/*!
  * VERSION: 2019-09-24 | CROSS | Paragraph Mode
- * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
- * used in accordance with an MIT License (OSI).
- */
-/**
- * A paragraph mode stylesheet for CROSS Bibles with
- * functional CSS from Tachyons.
  *
- * This scss version is a developer document and should
- * be compiled and minified for production environments.
+ * A paragraph mode stylesheet for CROSS Bibles
  */
 
-
-
-
-
-/*------------------------------------*\
-  #CONTENTS
-\*------------------------------------*/
-/**
- * FONTS................Add font-families and variables.
- * GLOBAL...............Other globally-available variables.
- * NORMALIZATION........Box sizing and modified Normalize CSS
- *                      (http: //normalize.css.github.io)
- *
- * TITLE-PAGE...........Title page styles.
- * HEADINGS.............h1–h6 and other headings styles.
- * INLINE-ELEMENTS......HTML inline element styles.
- *
- * ASIDES...............Aside styles.
- * FIGURES..............Figures and related helper classes.
- * LISTS................List styles.
- * TABLES...............Table styles.
- * VIDEOS...............Video and video glyph styles.
- * QUOTES...............Block quotes and pull quotes.
- * BLOCKS...............Other type-associated blocks.
- *
- * TEXT-GENERAL.........Classes for basic formatting of text.
- * TEXT-TYPES...........Classes for specific types of content.
- * LANGUAGES............Styling for language elements and classes.
- *
- * TACHYONS.............TACHYONS (modified) | http: //tachyons.io
- */
-
-
-
-
-
-/*------------------------------------*\
- #GLOBAL
-\*------------------------------------*/
-
-$serif-font: "Georgia", "Times New Roman", serif;
-$sans-font:  "Verdana", "Arial", "Helvetica", sans-serif;
-$lang-font:  "Gentium Plus", "Gentium", "Charis SIL", serif;
-
-@import "includes/tachyons/font-family";
-
-
-
-
-
-/*------------------------------------*\
-  #GLOBAL VARIABLES
-\*------------------------------------*/
-
-@import "includes/tachyons/colors";
-@import "includes/tachyons/media-queries";
-@import "includes/ws/global";
-@import "includes/ws/defaults-bible";
-
-
-
-
-
-/*------------------------------------*\
-  #NORMALIZATION
-\*------------------------------------*/
-
-@import "includes/shared/normalize";
-@import "includes/tachyons/box-sizing";
-
-
-
-
-
-/*------------------------------------*\
-  #TITLE-PAGE
-\*------------------------------------*/
-
-@import "includes/ws/titlepage";
-
-
-
-
-
-/*------------------------------------*\
-  #HEADINGS
-\*------------------------------------*/
-
-@import "includes/shared/headings";
-@import "includes/ws/parts";
-
-
-/**
- * .bridgehead for use with <p>
- */
-
-.bridgehead {
-  @include bridgehead(); //from shared/headings
-}
-
-
-
-
-
-/*------------------------------------*\
-  #INLINE-ELEMENTS
-\*------------------------------------*/
-
-/**
- * Not all inline elements from mywsb.css translate to inline
- * elements in CROSS, but they remain here for consistency.
- */
-
-@import "includes/shared/inline";
-
-.dictterm {
-  @include dictionary-term();
-}
-
-.esstrongs {
-  @include strongs();
-}
-
-
-
-
-
-/*------------------------------------*\
-  #ASIDES
-\*------------------------------------*/
-
-@import "includes/shared/asides";
-
-.aside {
-  @include asides();
-}
-
-
-
-
-
-/*------------------------------------*\
-  #FIGURES
-\*------------------------------------*/
-
-@import "includes/shared/figures";
-
-.full-width {
-  max-width: $full-width-ns;
-  width: $full-width-ns;
-}
-
-.float-right {
-  @include figure-float(right);
-}
-
-.float-left {
-  @include figure-float(left);
-}
-
-.figcaption {
-  @include figcap-decs();
-}
-
-
-
-
-
-/*------------------------------------*\
-  #LISTS
-\*------------------------------------*/
-
-@mixin list-layout() {
-  margin-top: $spacing-medium;
-  margin-bottom: $spacing-medium;
-}
-
-ol,
-ul {
-  list-style-type: none;
-  @include list-layout();
-}
-
-
-
-
-/*------------------------------------*\
-  #TABLES
-\*------------------------------------*/
-
-$offset-color: $moon-gray;
-
-/*
- * Table container
- */
-
-.container {
-  width: 100%;
-  overflow: auto;
-}
-
-/*
- * Tables
- */
-
-@import "includes/shared/tables";
-
-/*
- * for use with any <tr>, <th>, or <td> element
- */
-
-.middle {
-  vertical-align: middle;
-}
-
-.offset {
-  background-color: $offset-color;
-}
-
-.center table {
-  margin: 1em auto;
-}
-
-
-
-
-
-/*------------------------------------*\
-  #VIDEOS
-\*------------------------------------*/
-
-@import "includes/shared/video";
-
-.poster {
-  @include video-def();
-  width: 80%;
-}
-
-
-
-
-
-/*------------------------------------*\
-  #QUOTES
-\*------------------------------------*/
-
-.scriptext {
-  border: none;
-  font-size: 1em;
-  font-style: italic;
-  margin: 1em 10%;
-  padding: 0;
-  .italic {
-    font-style: normal;
+// May need to be updated with additional styles
+// as new Bibles are developed
+
+// This scss version is a developer document and should
+// be compiled and minified for production environments.
+
+.biblechapter {
+  p.dib.poem1,
+  p.dib.poem2,
+  p.dib.poem3,
+  p.dib.poem4,
+  p.dib.poem5,
+  p.dib.poem6,
+  p.dib.poem7,
+  p.dib.poem8,
+  p.dib.poem9,
+  p.dib.poem10 {
+    padding-left: 1.5em;
+    text-indent: 0;
   }
 }
 
-
-
-
-
-/*------------------------------------*\
-  #BLOCKS
-\*------------------------------------*/
-
-@import "includes/ws/blocks";
-@import "includes/shared/poetry";
-
-
-
-
-
-/*------------------------------------*\
-  #TEXT-GENERAL
-\*------------------------------------*/
-
-@import "includes/shared/text-block";
-@import "includes/shared/text-inline";
-
-
-
-
-
-/*------------------------------------*\
-  #TEXT-TYPES
-\*------------------------------------*/
-
-$fn-size: $type-scale-8;
-$fn-color: $black;
-
-@import "includes/shared/fn";
-@import "includes/shared/text-types";
-@import "includes/shared/bibles";
-
 .scripture,
 .versemode {
-  @include no-display();
+  display: none !important;
 }
 
-span.JesusWords {
-	color: $red;
-}
-
-
-
-
-
-/*------------------------------------*\
-  #LANGUAGES
-\*------------------------------------*/
-
-@import "includes/shared/languages";
-
-
-
-
-
-/*------------------------------------*\
-  #TACHYONS (modified)
-\*------------------------------------*/
-
-//@import "includes/tachyons/background-size";
-//@import "includes/tachyons/background-position";
-//@import "includes/tachyons/outlines";
-@import "includes/tachyons/borders";
-@import "includes/tachyons/border-colors";
-//@import "includes/tachyons/border-radius";
-@import "includes/tachyons/border-style";
-@import "includes/tachyons/border-widths";
-@import "includes/tachyons/box-shadow";
-//@import "includes/tachyons/code";
-//@import "includes/tachyons/coordinates";
-@import "includes/tachyons/clears";
-@import "includes/tachyons/display";
-//@import "includes/tachyons/flexbox";
-@import "includes/tachyons/floats";
-@import "includes/tachyons/font-style";
-@import "includes/tachyons/font-weight";
-//@import "includes/tachyons/forms";
-@import "includes/tachyons/heights";
-@import "includes/tachyons/letter-spacing";
-@import "includes/tachyons/line-height";
-//@import "includes/tachyons/links";
-//@import "includes/tachyons/lists";
-@import "includes/tachyons/max-widths";
-@import "includes/tachyons/widths";
-@import "includes/tachyons/overflow";
-@import "includes/tachyons/position";
-@import "includes/tachyons/opacity";
-//@import "includes/tachyons/rotations";
-@import "includes/tachyons/skins";
-@import "includes/tachyons/skins-pseudo";
-@import "includes/tachyons/spacing";
-@import "includes/tachyons/negative-margins";
-@import "includes/tachyons/tables";
-@import "includes/tachyons/text-decoration";
-@import "includes/tachyons/text-align";
-@import "includes/tachyons/text-transform";
-@import "includes/tachyons/type-scale";
-@import "includes/tachyons/typography";
-@import "includes/tachyons/utilities";
-//@import "includes/tachyons/visibility";
-@import "includes/tachyons/white-space";
-@import "includes/tachyons/vertical-align";
-//@import "includes/tachyons/hovers";
-//@import "includes/tachyons/z-index";
-//@import "includes/tachyons/nested";
-@import "includes/tachyons/styles";
