--- a/src/verse.scss
+++ b/src/verse.scss
@@ -1,218 +1,40 @@
-/*!*
- * VERSION: 2019-09-24 | CROSS | Verse Mode
- * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
- * used in accordance with an MIT License (OSI).
- */
-/**
- * A verse mode stylesheet for CROSS Bibles with
- * functional CSS from Tachyons.
+/*!
+ * VERSION: 2020-02-07 | CROSS | Verse Mode
  *
- * This scss version is a developer document and should
- * be compiled and minified for production environments.
+ * A verse mode stylesheet for CROSS Bibles
  */
 
+// May need to be updated with additional styles
+// as new Bibles are developed
 
+// This scss version is a developer document and should
+// be compiled and minified for production environments.
 
-
-
-/*------------------------------------*\
-  #CONTENTS
-\*------------------------------------*/
-/**
- * FONTS................Add font-families and variables.
- * GLOBAL...............Other globally-available variables.
- * NORMALIZATION........Box sizing and modified Normalize CSS
- *                      (http: //normalize.css.github.io)
- *
- * TITLE-PAGE...........Title page styles.
- * HEADINGS.............h1–h6 and other headings styles.
- * INLINE-ELEMENTS......HTML inline element styles.
- *
- * FIGURES..............Figures and related helper classes.
- * QUOTES...............Block quotes and pull quotes.
- * BLOCKS...............Other type-associated blocks.
- *
- * TEXT-GENERAL.........Classes for basic formatting of text.
- * TEXT-TYPES...........Classes for specific types of content.
- * LANGUAGES............Styling for language elements and classes.
- *
- * TACHYONS.............TACHYONS (modified) | http: //tachyons.io
- */
-
-
-
-
-
-/*------------------------------------*\
- #GLOBAL
-\*------------------------------------*/
-
-$serif-font: "Georgia", "Times New Roman", serif;
-$sans-font:  "Verdana", "Arial", "Helvetica", sans-serif;
-$lang-font:  "Gentium Plus", "Gentium", "Charis SIL", serif;
-
-@import "includes/tachyons/font-family";
-
-
-
-
-
-/*------------------------------------*\
-  #GLOBAL VARIABLES
-\*------------------------------------*/
-
-@import "includes/tachyons/colors";
-@import "includes/tachyons/media-queries";
-@import "includes/ws/global";
-@import "includes/ws/defaults-bible";
-
-
-
-
-
-/*------------------------------------*\
-  #NORMALIZATION
-\*------------------------------------*/
-
-@import "includes/shared/normalize";
-@import "includes/tachyons/box-sizing";
-
-body *,
-tr {
-  display: inline;
-  margin: 0;
-  padding: 0;
-  text-indent: 0;
-}
-
-
-
-
-
-/*------------------------------------*\
-  #TITLE-PAGE
-\*------------------------------------*/
-
-@import "includes/ws/titlepage";
-
-
-
-
-
-/*------------------------------------*\
-  #HEADINGS
-\*------------------------------------*/
-
-@import "includes/shared/headings";
-@import "includes/ws/parts";
-
-
-/**
- * .bridgehead for use with <p>
- */
-
-.bridgehead {
-  @include bridgehead(); //from shared/headings
-}
-
-
-
-
-
-/*------------------------------------*\
-  #INLINE-ELEMENTS
-\*------------------------------------*/
-
-/**
- * Not all inline elements from mywsb.css translate to inline
- * elements in CROSS, but they remain here for consistency.
- */
-
-@import "includes/shared/inline";
-
-.dictterm {
-  @include dictionary-term();
-}
-
-.esstrongs {
-  @include strongs();
-}
-
-
-
-
-
-/*------------------------------------*\
-  #QUOTES
-\*------------------------------------*/
-
-.scriptext {
-  border: none;
-  font-size: $spacing-medium;
-  font-style: italic;
-  margin: 0;
-  padding: 0;
-  .italic {
-    font-style: normal;
+.biblechapter {
+  font-size: 100%;
+  div, p {
+    display: inline;
+    margin: 0;
+    padding: 0;
+    text-indent: 0;
+  }
+  p {
+    margin-right: 0.15em;
+  }
+  div.center {
+    display: block;
+    margin: 1em auto;
+    p {
+      margin-right: 0;
+      padding-top: 0.75em;
+    }
+  }
+  .h1sub, .h2sub, .h3sub {
+    margin: -0.25em 0 0.5em 0;
+    padding-top: 0.75em;
+    display: block;
   }
 }
-
-
-
-
-
-/*------------------------------------*\
-  #BLOCKS
-\*------------------------------------*/
-
-@import "includes/ws/blocks";
-
-/**
- * Poetry
- */
-.poetry p,
-.poem1,
-.poem2,
-.poem3,
-.poem4,
-.poem5,
-.poem6,
-.poem7,
-.poem8,
-.poem9,
-.poem10 {
-  margin-left: 0.25em;
-}
-
-
-ol,
-ul {
-  list-style-type: none;
-}
-
-
-
-
-
-/*------------------------------------*\
-  #TEXT-GENERAL
-\*------------------------------------*/
-
-@import "includes/shared/text-inline";
-
-
-
-
-
-/*------------------------------------*\
-  #TEXT-TYPES
-\*------------------------------------*/
-
-$fn-size: $type-scale-8;
-$fn-color: $black;
-
-@import "includes/shared/fn";
-@import "includes/shared/bibles";
 
 .scripture {
   display: block !important;
@@ -223,73 +45,3 @@ $fn-color: $black;
 .versemode {
   display: inline;
 }
-
-span.JesusWords {
-	color: $red;
-}
-
-
-
-
-
-/*------------------------------------*\
-  #LANGUAGES
-\*------------------------------------*/
-
-@import "includes/shared/languages";
-
-
-
-
-
-/*------------------------------------*\
-  #TACHYONS (modified)
-\*------------------------------------*/
-
-//@import "includes/tachyons/background-size";
-//@import "includes/tachyons/background-position";
-//@import "includes/tachyons/outlines";
-@import "includes/tachyons/borders";
-@import "includes/tachyons/border-colors";
-//@import "includes/tachyons/border-radius";
-@import "includes/tachyons/border-style";
-@import "includes/tachyons/border-widths";
-@import "includes/tachyons/box-shadow";
-//@import "includes/tachyons/code";
-//@import "includes/tachyons/coordinates";
-@import "includes/tachyons/clears";
-@import "includes/tachyons/display";
-//@import "includes/tachyons/flexbox";
-@import "includes/tachyons/floats";
-@import "includes/tachyons/font-style";
-@import "includes/tachyons/font-weight";
-//@import "includes/tachyons/forms";
-@import "includes/tachyons/heights";
-@import "includes/tachyons/letter-spacing";
-@import "includes/tachyons/line-height";
-//@import "includes/tachyons/links";
-//@import "includes/tachyons/lists";
-@import "includes/tachyons/max-widths";
-@import "includes/tachyons/widths";
-@import "includes/tachyons/overflow";
-@import "includes/tachyons/position";
-@import "includes/tachyons/opacity";
-//@import "includes/tachyons/rotations";
-@import "includes/tachyons/skins";
-@import "includes/tachyons/skins-pseudo";
-@import "includes/tachyons/spacing";
-@import "includes/tachyons/negative-margins";
-@import "includes/tachyons/tables";
-@import "includes/tachyons/text-decoration";
-@import "includes/tachyons/text-align";
-@import "includes/tachyons/text-transform";
-@import "includes/tachyons/type-scale";
-@import "includes/tachyons/typography";
-@import "includes/tachyons/utilities";
-//@import "includes/tachyons/visibility";
-@import "includes/tachyons/white-space";
-@import "includes/tachyons/vertical-align";
-//@import "includes/tachyons/hovers";
-//@import "includes/tachyons/z-index";
-//@import "includes/tachyons/nested";
-@import "includes/tachyons/styles";
