--- a/test/styles/wordsearch.css
+++ b/test/styles/wordsearch.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-/*!*
- * VERSION: 2019-09-24 | CROSS | General
+/*!
+ * VERSION: 2020-02-07 | CROSS | Wordsearch
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -8,9 +8,6 @@
  * A general stylesheet for CROSS eBooks, combining
  * familiar styles for the B&H Direct eBook Development
  * team with functional CSS from Tachyons.
- *
- * This scss version is a developer document and should
- * be compiled and minified for production environments.
  */
 /*------------------------------------*\
   #CONTENTS
@@ -839,8 +836,6 @@ h6,
 .part-4,
 .part-5,
 .part-6 {
-  background: #333;
-  color: #fff;
   display: block;
   font-size: 2em;
   font-weight: bold;
@@ -1615,6 +1610,13 @@ span.index-term {
   padding-left: 10.5em;
 }
 
+.biblechapter .center,
+.biblechapter .center p {
+  display: block;
+  text-align: center;
+  text-indent: 0;
+}
+
 /**
  * With inline or block elements
  */
@@ -1661,14 +1663,18 @@ span.index-term {
   vertical-align: 0.7em;
 }
 
-/**
- * Footnote text
- */
 .fntext {
   color: #0000ff;
   display: none;
   font-size: 0.8em;
   font-variant: normal;
+}
+
+.biblechapter .fn {
+  color: #000;
+}
+.biblechapter .fntext {
+  font-size: 1em;
 }
 
 /**
@@ -1721,6 +1727,26 @@ span.index-term {
 .verse {
   font-size: 0.875em;
   font-weight: bold;
+}
+
+.versenum,
+.nonversenum {
+  font-size: 0.75em;
+  font-weight: bold;
+  line-height: 0;
+  margin-right: 0.15em;
+  position: relative;
+  top: -0.4em;
+  vertical-align: baseline;
+}
+
+.selah {
+  font-style: italic;
+  padding-left: 16em;
+}
+
+.span.JesusWords {
+  color: #ff4136;
 }
 
 /*------------------------------------*\
@@ -9235,4 +9261,9 @@ span.index-term {
 
 .i .i {
   font-style: normal;
+}
+
+.biblechapter p.dib {
+  display: inline;
+  margin-right: 0.75em;
 }
