--- a/mywsb-dev.css
+++ b/mywsb-dev.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!*
- * VERSION: 2019-09-24 | EPUB | Development
+ * VERSION: 2020-02-26 | EPUB | Development
  * TACHYONS is copyright (c) 2015 @mrmrs (mrmrs.io) and
  * used in accordance with an MIT License (OSI).
  */
@@ -705,7 +705,8 @@ nav[epub\:type~=page-list] {
 /*
  * h1-6
  */
-h1 {
+h1,
+.h1 {
   font: normal 500 2.25em -apple-system, BlinkMacSystemFont, "avenir next", avenir, "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", arial, sans-serif;
   margin: 2rem 0 1rem 0;
   clear: both;
@@ -1541,16 +1542,6 @@ div[epub|type~=footnote] p, div[epub\:type~=footnote] p {
   font: normal normal 0.6em -apple-system, BlinkMacSystemFont, "avenir next", avenir, "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", arial, sans-serif;
   position: relative;
   vertical-align: 0.7em;
-}
-
-/**
- * Footnote text
- */
-.fntext {
-  color: #0000ff;
-  display: none;
-  font-size: 0.8em;
-  font-variant: normal;
 }
 
 /**
