--- a/src/mywsb-vers.scss
+++ b/src/mywsb-vers.scss
@@ -1,5 +1,5 @@
 /*!
- * VERSION: 2020-02-07 | EPUB | Production
+ * VERSION: 2020-02-26 | EPUB | Production
  *
  * A verse mode stylesheet for app.wordsearchbible.com EPUB Bibles
  */
@@ -11,6 +11,7 @@
   div:not(.center),
   p:not(.tc):not(.h1sub):not(.h2sub):not(.h3sub) {
     display: inline;
+    padding: 0;
   }
 }
 
