--- a/test/styles/epub/verse.css
+++ b/test/styles/epub/verse.css
@@ -2,4 +2,4 @@
  * VERSION: 2020-02-26 | EPUB | Production
  *
  * A verse mode stylesheet for app.wordsearchbible.com EPUB Bibles
- */[data-scripture-chapter] div:not(.center),[data-scripture-chapter] p:not(.tc):not(.h1sub):not(.h2sub):not(.h3sub){display:inline;padding:0}.versenum::before{content:"";display:block}.poem1,.poem2,.poem3,.poem4,.poem5,.poem6,.poem7,.poem8,.poem9,.poem10{margin-left:0}
+ */[data-scripture-chapter] div:not(.center),[data-scripture-chapter] p:not(.tc):not(.h1):not(.h1sub):not(.h2sub):not(.h3sub){display:inline;padding:0}.versenum::before{content:"";display:block}.poem1,.poem2,.poem3,.poem4,.poem5,.poem6,.poem7,.poem8,.poem9,.poem10{margin-left:0}
